apps/go-app/busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: services
spec:
  containers:
  - image: curlimages/curl
    command:
      - sleep
      - "3600"
    imagePullPolicy: IfNotPresent
    name: busybox
  restartPolicy: Always
