apps/go-app/service-active.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app-active
  namespace: services
spec:
  ports:
  - name: http1
    port: 80
    protocol: TCP
    targetPort: 8091
  selector:
    app: go-app
  sessionAffinity: None
  type: ClusterIP
