apps/go-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-app
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8091
  selector:
    app: go-app
  type: ClusterIP
